Saving vertices to neo4j

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
 # root level
 logging.level.root=INFO
+
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=neo4j1
+
+#org.neo4j.driver.uri=bolt://localhost:7687
+#org.neo4j.driver.authentication.username=neo4j
+#org.neo4j.driver.authentication.password=neo4j1
+
+logging.level.org.neo4j.springframework.data=DEBUG
